--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+}
+
+/* Header styles */
+.logo {
+  font-size: 4.8rem;
+  line-height: 5.7rem;
+  margin-left: 3.787rem;
+  letter-spacing: 0.48rem;
+}
+
+header {
+  padding-top: 7.6rem;
+  display: flex;
+  align-items: center;
+  margin-left: 8.3rem;
+}
+
+.menu-btn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5.613rem;
+  height: 3.368rem;
+  cursor: pointer;
+}
+
+.menu-btn-burger {
+  width: 100%;
+  height: 0.6rem;
+  background-color: black;
+}
+
+.menu-btn-burger::before,
+.menu-btn-burger::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.6rem;
+  background-color: black;
+}
+
+.menu-btn-burger::before {
+  transform: translateY(-1.4rem);
+}
+
+.menu-btn-burger::after {
+  transform: translateY(1.4rem);
 }
