--- a/src/index.css
+++ b/src/index.css
@@ -353,3 +353,43 @@ header {
   left: 12.47rem;
   top: 51.663rem;
 }
+
+/* Purchase Section Styles */
+
+.purchase {
+  height: 75vh;
+  width: 100vw;
+  background-color: #191919;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 17.2rem;
+  padding-right: 18.9rem;
+}
+
+.purchase h2 {
+  font-size: 7.4rem;
+  letter-spacing: 0.74rem;
+  color: #D34848;
+}
+
+.purchase h3 {
+  font-size: 5.1rem;
+  letter-spacing: 0.51rem;
+  color: white;
+  font-weight: normal;
+  margin-top: 2.1rem;
+}
+
+.purchase button {
+  width: 36rem;
+  height: 10rem;
+  border-radius: 7.9rem;
+  border: none;
+  background: linear-gradient(90deg, #1FE1E9 0%, #5E33D1 34%, #D34848 65%, #FFB33F 100%);
+  color: white;
+  font-size: 2.9rem;
+  letter-spacing: 0.29rem;
+  font-weight: bold;
+}
