--- a/src/index.css
+++ b/src/index.css
@@ -393,3 +393,48 @@ header {
   letter-spacing: 0.29rem;
   font-weight: bold;
 }
+
+/* Footer Styles */
+
+footer {
+  height: 50vh;
+  width: 100vw;
+  background-color: #5E33D1;
+}
+
+.email {
+  margin-left: 13.9rem;
+  padding-top: 18.9rem;
+  display: flex;
+  color: white;
+  align-items: center;
+}
+
+.fa-envelope::before {
+  font-size: 3rem;
+  margin-right: 2.364rem;
+}
+
+.email p {
+  font-size: 3.5rem;
+  letter-spacing: 0.35rem;
+}
+
+footer h4 {
+  text-align: center;
+  font-size: 4.8rem;
+  color: white;
+  font-weight: normal;
+  letter-spacing: 0.48rem;
+  margin-top: 9.9rem;
+  margin-bottom: 4.5rem;
+}
+
+footer small {
+  font-size: 2.4rem;
+  letter-spacing: 0.24rem;
+  text-align: center;
+  display: block;
+  color: white;
+  font-weight: normal;
+}
