--- a/src/index.css
+++ b/src/index.css
@@ -613,3 +613,185 @@ footer {
   color: #0B0B0B;
 }
 
+/* Payment Section Styles */
+
+.payment {
+  height: 200vh;
+  width: 100vw;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 18.3rem;
+}
+
+.paymentPage header {
+  color: black;
+}
+
+.paymentPage header .menu-btn-burger, .paymentPage header .menu-btn-burger::before, .paymentPage header .menu-btn-burger::after {
+  background-color: black;
+}
+
+.payment h2 {
+  font-size: 7.4rem;
+  letter-spacing: 0.74rem;
+  margin-bottom: 12.1rem;
+}
+
+.payment h3 {
+  font-size: 4.5rem;
+  letter-spacing: 0.45rem;
+  font-weight: normal;
+  margin-bottom: 3.2rem;
+}
+
+.personalInfo {
+  display: flex;
+  margin-top: 14.8rem;
+}
+
+.billInfo, .cardInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.personalInfo label {
+  font-size: 2.2rem;
+  letter-spacing: 0.22rem;
+  font-weight: bold;
+  margin-bottom: 1.2rem;
+}
+
+.personalInfo input {
+  width: 68.1rem;
+  height: 7.4rem;
+  margin-bottom: 3.1rem;
+  border: 0.2rem solid black;
+  padding-left: 3.8rem;
+  font-size: 2.8rem;
+  letter-spacing: 0.28rem;
+}
+
+.subForm input {
+  width: 32.1rem;
+}
+
+.subForm {
+  display: flex;
+}
+
+.subSubForm:nth-of-type(2) {
+  margin-left: 3.7rem;
+}
+
+.subSubForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.cardInfo {
+  margin-left: 12.1rem;
+}
+
+.payment small {
+  font-size: 2.2rem;
+  letter-spacing: 0.22rem;
+  width: 65.1rem;
+  line-height: 3.4rem;
+  color: #191919;
+  margin-top: 12.5rem;
+  margin-bottom: 3.1rem;
+}
+
+.payment small span {
+  font-weight: bold;
+  color: #2F1FE9;
+}
+
+.download {
+  width: 21.7rem;
+  height: 6rem;
+  border: none;
+  border-radius: 7.9rem;
+  background: linear-gradient(90deg, #1FE1E9 0%, #5E33D1 34%, #D34848 65%, #FFB33F 100%);
+  font-weight: bold;
+  font-size: 1.9rem;
+  letter-spacing: 0.19rem;
+  color: white;
+}
+
+.personalInfo input:focus {
+  border-bottom: 0.8rem solid #2F1FE9;
+  outline: none;
+}
+
+.paymentPlan {
+  display: flex;
+}
+
+.round {
+  margin-right: 8.3rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-left: 5rem;
+}
+
+.paymentPlan label {
+  font-size: 3.7rem;
+  letter-spacing: 0.37rem;
+  font-weight: bold;
+  margin-left: 1.3rem;
+  cursor: pointer;
+}
+
+.round:first-of-type {
+  color: #D24848;
+}
+
+.round:nth-of-type(2) {
+  color: #FFB33F;
+}
+
+.round:last-of-type {
+  color: #1FE1E9;
+}
+
+.round input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30px;
+  width: 30px;
+  background-color: white;
+  border-radius: 50%;
+  border: 3px solid black;
+  margin-top: 0.4rem;
+
+}
+
+.round:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.round:first-of-type input:checked ~ .checkmark {
+  background-color: #D24848;
+  border: none;
+}
+
+.round:nth-of-type(2) input:checked ~ .checkmark {
+  background-color: #FFB33F;
+  border: none;
+}
+
+.round:last-of-type input:checked ~ .checkmark {
+  background-color: #1FE1E9;
+  border: none;
+}
