--- a/src/index.css
+++ b/src/index.css
@@ -194,7 +194,8 @@ header {
 .yellowSection {
   height: 100vh;
   width: 100vw;
-  background-color: #FFB33F;
+  background: url('./img/yellowImage.png');
+  background-position: -104.2rem -50.2rem ;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -849,4 +850,26 @@ footer {
 .cursor{
   cursor: url('./img/cursor.png'), auto;
 }
+
+button {
+  cursor: pointer;
+  z-index: 100;
+}
+
+canvas {
+  background: transparent;
+}
+
+.swiper-pagination-bullet {
+  border: 1px solid white !important;
+  width: 1.6rem !important;
+  height: 1.6rem !important;
+  background-color: transparent !important;
+  opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: white !important;
+}
+
 
